# discord-message-to-image

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  message.rs
web/: api.js  index.html  package.json  pnpm-lock.yaml  style.css  theme.css
