[package]
name = "discord-message-to-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
fantoccini = "0.19.3"
serde = "1.0.151"
image = "0.24.5"
tokio = { version = "1.24.2", features = ["full"] }
serde_json = "1.0.91"
inquire = "0.5.2"
